Centered header, removed side image, SPS in Cinzel old-school Roman font

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700;900&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700;900&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <style>
         :root {
             --text-dark: #1a1a1a;
@@ -156,60 +156,44 @@
         .header-container {
             max-width: 1400px;
             margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+            text-align: center;
             position: relative;
             z-index: 1;
         }
 
         .masthead {
             text-align: center;
-            flex: 1;
         }
 
-        .title-row {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 1rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .masthead-icon {
-            width: 90px;
-            height: 90px;
-            border-radius: 50%;
-            flex-shrink: 0;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.4);
-            border: 3px solid rgba(255,255,255,0.3);
-        }
-
-        /* SPS in vibrant colors - old school serif */
+        /* SPS in old-school Roman/classical font */
         .site-title .sps {
-            font-family: 'Playfair Display', 'Georgia', serif;
-            font-size: 4rem;
+            font-family: 'Cinzel', 'Times New Roman', serif;
+            font-size: 5rem;
             font-weight: 900;
-            letter-spacing: 0.05em;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            letter-spacing: 0.15em;
+            text-shadow: 3px 3px 6px rgba(0,0,0,0.4);
         }
         .site-title .s1 { color: #60a5fa; }  /* Science - bright blue */
         .site-title .p1 { color: #c084fc; }  /* Philosophy - bright purple */
         .site-title .s2 { color: #fb7185; }  /* Society - bright rose */
 
         .site-title .daily {
-            font-family: 'Source Sans Pro', sans-serif;
-            font-size: 1.8rem;
-            font-weight: 300;
-            letter-spacing: 0.3em;
-            color: rgba(255,255,255,0.9);
-            margin-left: 0.5rem;
+            font-family: 'Cinzel', serif;
+            font-size: 2rem;
+            font-weight: 400;
+            letter-spacing: 0.4em;
+            color: rgba(255,255,255,0.85);
+            display: block;
+            margin-top: -0.5rem;
         }
 
         .header-right {
+            position: absolute;
+            top: 1rem;
+            right: 1rem;
             display: flex;
             align-items: center;
-            gap: 0.75rem;
+            gap: 0.5rem;
         }
 
         .social-btn {
@@ -741,13 +725,10 @@
     <header>
         <div class="header-container">
             <div class="masthead">
-                <div class="title-row">
-                    <img src="sps-icon.png" alt="SPS Daily" class="masthead-icon">
-                    <h1 class="site-title">
-                        <span class="sps"><span class="s1">S</span><span class="p1">P</span><span class="s2">S</span></span>
-                        <span class="daily">DAILY</span>
-                    </h1>
-                </div>
+                <h1 class="site-title">
+                    <span class="sps"><span class="s1">S</span><span class="p1">P</span><span class="s2">S</span></span>
+                    <span class="daily">DAILY</span>
+                </h1>
                 <p class="tagline">Science · Philosophy · Society</p>
                 <p class="motto">एकं सत् — Truth is One</p>
                 <p class="date-line" id="date-line"></p>
