Fix: Ekam Sat, single color header, SPS in Cormorant SC font

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPS Daily — Science, Philosophy & Society</title>
-    <meta name="description" content="A daily digest of the best writing on science, philosophy, and society. Ekum Sat.">
+    <meta name="description" content="A daily digest of the best writing on science, philosophy, and society. Ekam Sat.">
 
     <!-- Open Graph / WhatsApp / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://spsdaily.thebeakers.com/">
     <meta property="og:title" content="SPS Daily — Science, Philosophy & Society">
-    <meta property="og:description" content="A curated digest of the best writing on science, philosophy, and society. Ekum Sat — Truth is One.">
+    <meta property="og:description" content="A curated digest of the best writing on science, philosophy, and society. Ekam Sat — Truth is One.">
     <meta property="og:image" content="https://spsdaily.thebeakers.com/og-image.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="SPS Daily — Science, Philosophy & Society">
-    <meta name="twitter:description" content="A curated digest of the best writing on science, philosophy, and society. Ekum Sat — Truth is One.">
+    <meta name="twitter:description" content="A curated digest of the best writing on science, philosophy, and society. Ekam Sat — Truth is One.">
     <meta name="twitter:image" content="https://spsdaily.thebeakers.com/og-image.png">
 
     <!-- Favicons -->
@@ -27,7 +27,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700;900&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Cormorant+SC:wght@700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700;900&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <style>
         :root {
             --text-dark: #1a1a1a;
@@ -134,7 +134,7 @@
         /* Header with logo background */
         header {
             position: relative;
-            background: linear-gradient(135deg, #1e3a5f 0%, #2d1b4e 50%, #4a1942 100%);
+            background: #1e3a5f;
             border-bottom: none;
             padding: 2rem;
             overflow: hidden;
@@ -165,12 +165,12 @@
             text-align: center;
         }
 
-        /* SPS in old-school Roman/classical font */
+        /* SPS in old-school elegant serif */
         .site-title .sps {
-            font-family: 'Cinzel', 'Times New Roman', serif;
-            font-size: 5rem;
-            font-weight: 900;
-            letter-spacing: 0.15em;
+            font-family: 'Cormorant SC', 'Georgia', serif;
+            font-size: 5.5rem;
+            font-weight: 700;
+            letter-spacing: 0.2em;
             text-shadow: 3px 3px 6px rgba(0,0,0,0.4);
         }
         .site-title .s1 { color: #60a5fa; }  /* Science - bright blue */
@@ -730,7 +730,7 @@
                     <span class="daily">DAILY</span>
                 </h1>
                 <p class="tagline">Science · Philosophy · Society</p>
-                <p class="motto">एकं सत् — Truth is One</p>
+                <p class="motto">एकं सत् (Ekam Sat) — Truth is One</p>
                 <p class="date-line" id="date-line"></p>
             </div>
             <div class="header-right">
@@ -882,7 +882,7 @@
         <p><strong>Founding Editor:</strong> Kiran Boggavarapu</p>
         <p>Curated with care. No algorithms. No clickbait.</p>
         <p><a href="about.html">About</a> · <a href="mailto:hello@thebeakers.com">Contact</a> · <a href="feed.xml">RSS</a></p>
-        <p class="footer-motto">"Ekum Sat" — The truth is one, though the sages speak of it in many ways.</p>
+        <p class="footer-motto">"Ekam Sat" — The truth is one, though the sages speak of it in many ways.</p>
         <p class="legal">
             <a href="privacy.html">Privacy Policy</a> · <a href="terms.html">Terms of Use</a><br>
             &copy; 2026 The Beakers. All rights reserved.
