SPS in Tangerine Victorian calligraphy script

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Cormorant+SC:wght@700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700;900&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700;900&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <style>
         :root {
             --text-dark: #1a1a1a;
@@ -165,26 +165,26 @@
             text-align: center;
         }
 
-        /* SPS in old-school elegant serif */
+        /* SPS in Victorian calligraphy script */
         .site-title .sps {
-            font-family: 'Cormorant SC', 'Georgia', serif;
-            font-size: 5.5rem;
+            font-family: 'Tangerine', cursive;
+            font-size: 8rem;
             font-weight: 700;
-            letter-spacing: 0.2em;
-            text-shadow: 3px 3px 6px rgba(0,0,0,0.4);
+            letter-spacing: 0.1em;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
         .site-title .s1 { color: #60a5fa; }  /* Science - bright blue */
         .site-title .p1 { color: #c084fc; }  /* Philosophy - bright purple */
         .site-title .s2 { color: #fb7185; }  /* Society - bright rose */
 
         .site-title .daily {
-            font-family: 'Cinzel', serif;
-            font-size: 2rem;
-            font-weight: 400;
-            letter-spacing: 0.4em;
+            font-family: 'Tangerine', cursive;
+            font-size: 3.5rem;
+            font-weight: 700;
+            letter-spacing: 0.2em;
             color: rgba(255,255,255,0.85);
             display: block;
-            margin-top: -0.5rem;
+            margin-top: -1rem;
         }
 
         .header-right {
