v2 collector: archive links, text config, better styling

--- a/index.html
+++ b/index.html
@@ -481,20 +481,25 @@
 
         .archive-link {
             font-family: 'Source Sans Pro', sans-serif;
-            font-size: 0.65rem;
-            color: var(--accent-red);
-            background: rgba(139, 0, 0, 0.1);
-            padding: 0.1rem 0.35rem;
-            border-radius: 3px;
+            font-size: 0.75rem;
+            color: #2e7d32;
+            background: rgba(46, 125, 50, 0.12);
+            padding: 0.2rem 0.5rem;
+            border-radius: 4px;
             text-decoration: none;
+            font-weight: 600;
+            letter-spacing: 0.02em;
+            margin-left: 0.5rem;
         }
 
         [data-theme="dark"] .archive-link {
-            background: rgba(207, 102, 121, 0.15);
+            color: #81c784;
+            background: rgba(129, 199, 132, 0.15);
         }
 
         .archive-link:hover {
-            background: rgba(139, 0, 0, 0.2);
+            background: rgba(46, 125, 50, 0.25);
+            text-decoration: none;
         }
 
         /* fallback for articles without images */
