--- a/index.html
+++ b/index.html
@@ -287,6 +287,99 @@
             padding: 2rem;
         }
 
+        /* Carousel */
+        .carousel-container {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .carousel-slides {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .carousel-slide {
+            min-width: 100%;
+            display: flex;
+            gap: 1.5rem;
+            padding: 0.5rem;
+            box-sizing: border-box;
+            text-align: left;
+        }
+
+        .carousel-slide img {
+            width: 200px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 6px;
+            flex-shrink: 0;
+        }
+
+        .carousel-slide-content {
+            flex: 1;
+        }
+
+        .carousel-slide-content h2 {
+            margin: 0 0 0.5rem 0;
+            font-size: 1.3rem;
+            line-height: 1.3;
+        }
+
+        .carousel-slide-content h2 a {
+            color: var(--text-primary);
+            text-decoration: none;
+        }
+
+        .carousel-slide-content h2 a:hover {
+            color: var(--accent-red);
+        }
+
+        .carousel-slide-content p {
+            font-size: 0.9rem;
+            color: var(--text-secondary);
+            margin: 0 0 0.5rem 0;
+            line-height: 1.5;
+        }
+
+        .carousel-slide-content .source {
+            font-size: 0.8rem;
+            color: var(--text-light);
+        }
+
+        .carousel-dots {
+            display: flex;
+            justify-content: center;
+            gap: 0.5rem;
+            margin-top: 1rem;
+        }
+
+        .carousel-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: var(--border);
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        .carousel-dot.active {
+            background: var(--accent-red);
+        }
+
+        .carousel-dot:hover {
+            background: var(--text-light);
+        }
+
+        @media (max-width: 600px) {
+            .carousel-slide {
+                flex-direction: column;
+            }
+            .carousel-slide img {
+                width: 100%;
+                height: 180px;
+            }
+        }
+
         /* Featured article */
         .featured {
             background: var(--bg-white);
@@ -852,16 +945,14 @@
 
         <div class="main-content">
     <main>
-        <!-- Featured Article (loaded from articles.json) -->
+        <!-- Featured Carousel (auto-rotating editor's picks) -->
         <article class="featured" id="featured">
-            <div class="featured-label">Editor's Pick</div>
-            <div class="featured-content">
-                <img id="featured-image" class="featured-image" alt="">
-                <div class="featured-text">
-                    <h2><a href="#" id="featured-link">Loading...</a></h2>
-                    <p id="featured-teaser"></p>
-                    <div class="source" id="featured-source"></div>
+            <div class="featured-label">Editor's Picks</div>
+            <div class="carousel-container">
+                <div class="carousel-slides" id="carousel-slides">
+                    <!-- Slides loaded dynamically -->
                 </div>
+                <div class="carousel-dots" id="carousel-dots"></div>
             </div>
         </article>
 
@@ -926,21 +1017,74 @@
                 const response = await fetch('articles.json');
                 const data = await response.json();
 
-                // Featured article
-                const featured = data.editorsPick;
-                document.getElementById('featured-link').href = featured.url;
-                document.getElementById('featured-link').textContent = featured.headline;
-                document.getElementById('featured-teaser').textContent = featured.teaser;
-                document.getElementById('featured-source').textContent = featured.source;
+                // Build carousel from top articles in each category
+                const carouselPicks = [];
 
-                // Featured image
-                const featuredImg = document.getElementById('featured-image');
-                if (featured.imageUrl) {
-                    featuredImg.src = featured.imageUrl;
-                    featuredImg.onerror = () => { featuredImg.style.display = 'none'; };
-                } else {
-                    featuredImg.style.display = 'none';
+                // Add editor's pick first if exists
+                if (data.editorsPick) {
+                    carouselPicks.push({...data.editorsPick, _category: 'pick'});
                 }
+
+                // Add top article from each category
+                ['science', 'philosophy', 'society', 'books', 'essays'].forEach(cat => {
+                    const articles = data[cat] || [];
+                    if (articles.length > 0 && !carouselPicks.find(p => p.url === articles[0].url)) {
+                        carouselPicks.push({...articles[0], _category: cat});
+                    }
+                });
+
+                // Render carousel slides
+                const slidesContainer = document.getElementById('carousel-slides');
+                const dotsContainer = document.getElementById('carousel-dots');
+
+                slidesContainer.innerHTML = carouselPicks.map((pick, i) => `
+                    <div class="carousel-slide">
+                        ${pick.imageUrl ? `<img src="${pick.imageUrl}" alt="" onerror="this.style.display='none'">` : ''}
+                        <div class="carousel-slide-content">
+                            <h2><a href="${pick.url}" target="_blank">${pick.headline}</a></h2>
+                            <p>${pick.teaser || ''}</p>
+                            ${pick.tldr ? `<p class="tldr"><span class="tldr-label">Why read:</span> ${pick.tldr}</p>` : ''}
+                            <div class="source">${pick.source} · ${pick._category}</div>
+                        </div>
+                    </div>
+                `).join('');
+
+                dotsContainer.innerHTML = carouselPicks.map((_, i) =>
+                    `<span class="carousel-dot ${i === 0 ? 'active' : ''}" data-index="${i}"></span>`
+                ).join('');
+
+                // Carousel auto-rotation
+                let currentSlide = 0;
+                const totalSlides = carouselPicks.length;
+
+                function goToSlide(index) {
+                    currentSlide = index;
+                    slidesContainer.style.transform = `translateX(-${index * 100}%)`;
+                    document.querySelectorAll('.carousel-dot').forEach((dot, i) => {
+                        dot.classList.toggle('active', i === index);
+                    });
+                }
+
+                // Auto-rotate every 8 seconds
+                let autoRotate = setInterval(() => {
+                    goToSlide((currentSlide + 1) % totalSlides);
+                }, 8000);
+
+                // Pause on hover
+                const featured = document.getElementById('featured');
+                featured.addEventListener('mouseenter', () => clearInterval(autoRotate));
+                featured.addEventListener('mouseleave', () => {
+                    autoRotate = setInterval(() => {
+                        goToSlide((currentSlide + 1) % totalSlides);
+                    }, 8000);
+                });
+
+                // Dot navigation
+                dotsContainer.addEventListener('click', (e) => {
+                    if (e.target.classList.contains('carousel-dot')) {
+                        goToSlide(parseInt(e.target.dataset.index));
+                    }
+                });
 
                 // Render each category (show all articles - 1 week retention)
                 ['science', 'philosophy', 'society', 'books'].forEach(category => {
