add JSON-LD, RSS link, canonical URL to head for SEO

--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
+    <!-- RSS Feed -->
+    <link rel="alternate" type="application/rss+xml" title="SPS Daily RSS Feed" href="https://spsdaily.thebeakers.com/feed.xml">
+
+    <!-- JSON-LD structured data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "SPS Daily",
+      "alternateName": "Science, Philosophy & Society Daily",
+      "url": "https://spsdaily.thebeakers.com",
+      "description": "A curated digest of the best writing on science, philosophy, and society. Ekam Sat — Truth is One.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "The Beakers",
+        "url": "https://thebeakers.com"
+      },
+      "potentialAction": {
+        "@type": "ReadAction",
+        "target": "https://spsdaily.thebeakers.com"
+      }
+    }
+    </script>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://spsdaily.thebeakers.com/">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700;900&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
